--- a/_work/3-socweb.html
+++ b/_work/3-socweb.html
@@ -1,5 +1,5 @@
 ---
-title: "Project Tesserae (Georgia Tech and University of Notre Dame) "
+title: "Project Tesserae <br>Georgia Tech"
 logo: "http://www.comm.gatech.edu/sites/default/files/images/brand-graphics/gt-logo-colors3.png"
 time: "Since Aug 2018"
 ---
@@ -9,3 +9,7 @@ time: "Since Aug 2018"
 <p>
     At the moment I'm trying to make sense of loads of LinkedIn data from various employees and understand their Role Ambiguity and its relationship to the stress they are put under in their work places. 
 </p>
+
+### Publications
+
+ + **The Tesserae Project: Large-Scale,Longitudinal,In Situ, MultimodalSensing of Information Workers.** Mattingly, S., Gregg, J., Audia, P., Bayraktaraglu, A. E., Campbell, A., Chawla, N., Das Swain, V., De Choudhury, M., D'Mello, S., Dey, A., Gao, G., Jagannath, K., Jiang, K., Lin, S., Liu, Q., Mark, G., Martinez, G., Masaba, K., Mirjafari, S., Moskal, E., Mulukutla, R., Nies, K., **Reddy, M.**, Robles-Granda, P., Saha, K., Sirigiri, A., and Striegel, A. (2019). *In Proceedings of the 2019 CHI Conference on Human Factors in Computing Systems Extended Abstracts. CHI Case Studies 2019.* [Non first two authors are listed alphabetically] ([pdf](http://www.munmund.net/pubs/CHI_CS_TesseraeLessons.pdf))
