--- a/_work/1-hchw.html
+++ b/_work/1-hchw.html
@@ -1,5 +1,5 @@
 ---
-title: "Hyderabad Center for Human Welfare"
+title: "Hyderabad Center for Human Welfare<br>Hyderabad"
 logo: "/images/work/hchw.png"
 time: "Jan 2018 - July 2018"
 ---
