--- a/_work/2-microsoft.html
+++ b/_work/2-microsoft.html
@@ -1,5 +1,5 @@
 ---
-title: "Microsoft"
+title: "Microsoft - Core Services Engineering<br>Hyderabad"
 logo: "/images/work/microsoft.png"
 time: "Jun 2017 - July 2018"
 ---
