--- a/_work/3-socweb.html
+++ b/_work/3-socweb.html
@@ -1,6 +1,6 @@
 ---
 title: "Project Tesserae <br>Georgia Tech"
-logo: "http://www.comm.gatech.edu/sites/default/files/images/brand-graphics/gt-logo-colors3.png"
+logo: "/images/work/gt-logo-colors3.png"
 time: "Since Aug 2018"
 ---
 <p>
