--- a/_work/2-microsoft.html
+++ b/_work/2-microsoft.html
@@ -3,5 +3,6 @@ title: "Microsoft - Core Services Engineering<br>Hyderabad"
 logo: "/images/work/microsoft.png"
 time: "Jun 2017 - July 2018"
 ---
-I worked for Core Services Engineering (CSE) with the Customer Account Life Cycle (CALC) tool, that serves the sales personnel of Microsoft and ensures they generate revenue as quickly as possible. I delivered mission-critical systems that generate large amounts of data capable of directly influencing key decision makers of the company and incentive compensation of sellers. 
+I was working on an Internal business tool called Customer Account Life Cycle (CALC) tool, that serves the sales personnel of Microsoft and ensures they generate revenue as quickly as possible. I delivered mission-critical systems that generate large amounts of data capable of directly influencing key decision makers of the company and incentive compensation of sellers. 
 
+    + One awesome thing I did was to design and build a highly scalable API leveraging Azure architecture that brought down a business process from *2 weeks to 5 days* with 0.1% inconsistencies churning more than **25 million requests** in that short period of time. It was pretty damn cool.
