--- a/_work/3-socweb.html
+++ b/_work/3-socweb.html
@@ -1,7 +1,7 @@
 ---
 title: "Project Tesserae <br>Georgia Tech"
 logo: "/images/work/gt-logo-colors3.png"
-time: "Since Aug 2018"
+time: "Aug 2018 - May 2019"
 ---
 <p>
     I'm a Research Assitant at Social Dynamics and Wellbeing Lab at Georgia Tech lead by <a href="http://www.munmund.net/" target="_blank">Dr. Munmun De Choudhury</a>. My current work involves applying natural language processing and statistical machine learning techniques to analyze large scale social media data to understand behavioral aspects of mental health of beings.
