--- a/resume/index.html
+++ b/resume/index.html
@@ -164,7 +164,7 @@
     <div id="Education">
         <h2>Education</h2>
         <ul>
-            <li>MS, Computer Science, Georgia Institute of Technology, Atlanta, Graduation: May 2019, Magna Cum Laude, 3.8/4</li>
+            <li>MS, Computer Science, Georgia Institute of Technology, Atlanta, Graduation: May 2019, 3.9/4</li>
             <li>B.Tech, Computer Science, Indian Institute of Technology, Kanpur, Graduation: Jun 2017, 3.4/4</li>
         </ul>
     </div>
