--- a/_work/3-socweb.html
+++ b/_work/3-socweb.html
@@ -12,20 +12,22 @@ time: "Aug 2018 - May 2019"
 
 ### Publications
 
+
 <ul>
     <li> 
-        <b>Imputing Missing Social Media Data Streams in Multisensor Studies of Human Behavior</b> 
-        <p style="font-size:9px">Koustuv Saha, <b>Manikanta D. Reddy</b>, Vedant Das Swain, Julie M. Gregg, Ted Grover, Suwen Lin, Gonzalo J. Martinez, Stephen M. Mattingly, Raghu Mulukutla, Kari Nies, Pablo Robles-Granda, Anusha Sirigiri, Dong Whi Yoo, Pino Audia, Andrew T. Campbell, Nitesh V. Chawla, Sidney K. D'Mello, Anind K. Dey, Kaifeng Jiang, Qiang Liu, Gloria Mark, Ed Moskal, Aaron Striegel, and Munmun De Choudhury (Non first three authors are listed alphabetically)</p> 
-        <p><i>Proceedings of Proceedings of International Conference on Affective Computing and Intelligent Interaction, To be Presented at ACII 2019.</i></p>
+        <strong>Imputing Missing Social Media Data Streams in Multisensor Studies of Human Behavior</strong> 
+        <p style="font-size:14px">Koustuv Saha, <strong>Manikanta D. Reddy</strong>, Vedant Das Swain, Julie M. Gregg, Ted Grover, Suwen Lin, Gonzalo J. Martinez, Stephen M. Mattingly, Raghu Mulukutla, Kari Nies, Pablo Robles-Granda, Anusha Sirigiri, Dong Whi Yoo, Pino Audia, Andrew T. Campbell, Nitesh V. Chawla, Sidney K. D'Mello, Anind K. Dey, Kaifeng Jiang, Qiang Liu, Gloria Mark, Ed Moskal, Aaron Striegel, and Munmun De Choudhury (Non first three authors are listed alphabetically)</p> 
+        <p style="font-size:14px"><i>Proceedings of Proceedings of International Conference on Affective Computing and Intelligent Interaction, To be Presented at ACII 2019.</i></p>
     </li>
     <li>
-        <b><a href="https://dl.acm.org/citation.cfm?id=3328908" target="_blank">Differentiating Higher and Lower Job Performers in the Workplace using Mobile Sensing.</a></b> 
-        <p style="font-size:9px">Shayan Mirjafari, Kizito Masaba, Ted Grover, Weichen Wang, W., Pino Audia, Andrew T. Campbell, Nitesh V. Chawla, Vedant Das Swain, Munmun De Choudhury, Anind K. Dey, Sidney K. D'Mello, Ge Gao, Julie M. Gregg, Krithika Jagannath, Kaifeng Jiang, Suwen Lin, Qiang Liu, Gloria Mark, Gonzalo J. Martinez, Stephen M. Mattingly, Edward Moskal, Raghu Mulukutla, Subigya Nepal, Kari Nies, <b>Manikanta D. Reddy</b>, Pablo Robles-Granda, Koustuv Saha, Anusha Sirigiri, and Aaron Striegel (Non first four authors are listed alphabetically)</p>
-        <p><i>Proceedings of the ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies (PACM IMWUT)</i></p>
+        <strong><a href="https://dl.acm.org/citation.cfm?id=3328908" target="_blank">Differentiating Higher and Lower Job Performers in the Workplace using Mobile Sensing.</a></strong> 
+        <p style="font-size:14px">Shayan Mirjafari, Kizito Masaba, Ted Grover, Weichen Wang, W., Pino Audia, Andrew T. Campbell, Nitesh V. Chawla, Vedant Das Swain, Munmun De Choudhury, Anind K. Dey, Sidney K. D'Mello, Ge Gao, Julie M. Gregg, Krithika Jagannath, Kaifeng Jiang, Suwen Lin, Qiang Liu, Gloria Mark, Gonzalo J. Martinez, Stephen M. Mattingly, Edward Moskal, Raghu Mulukutla, Subigya Nepal, Kari Nies, <strong>Manikanta D. Reddy</strong>, Pablo Robles-Granda, Koustuv Saha, Anusha Sirigiri, and Aaron Striegel (Non first four authors are listed alphabetically)</p>
+        <p style="font-size:14px"><i>Proceedings of the ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies (PACM IMWUT)</i></p>
     </li>
     <li>
-        <b><a hre="https://dl.acm.org/citation.cfm?id=3299041" target="_blank">The Tesserae Project: Large-Scale,Longitudinal,In Situ, MultimodalSensing of Information Workers. <a></b>
-        <p style="font-size:9px">Stephen M Mattingly, Julie M Gregg, Pino Audia, Ayse Elvan Bayraktaroglu, Andrew T Campbell, Nitesh V Chawla, Vedant Das Swain, Munmun De Choudhury, Sidney K D'Mello, Anind K Dey, Ge Gao, Krithika Jagannath, Kaifeng Jiang, Suwen Lin, Qiang Liu, Gloria Mark, Gonzalo J Martinez, Kizito Masaba, Shayan Mirjafari, Edward Moskal, Raghu Mulukutla, Kari Nies, <b>Manikanta D Reddy</b>, Pablo Robles-Granda, Koustuv Saha, Anusha Sirigiri, Aaron Striegel (2019).</p> 
-        <p><i>In Proceedings of the 2019 CHI Conference on Human Factors in Computing Systems Extended Abstracts. CHI Case Studies 2019. [Non first two authors are listed alphabetically]</i><p>
+        <strong><a href="https://dl.acm.org/citation.cfm?id=3299041" target="_blank">The Tesserae Project: Large-Scale,Longitudinal,In Situ, MultimodalSensing of Information Workers.</a></strong>
+        <p style="font-size:14px">Stephen M Mattingly, Julie M Gregg, Pino Audia, Ayse Elvan Bayraktaroglu, Andrew T Campbell, Nitesh V Chawla, Vedant Das Swain, Munmun De Choudhury, Sidney K D'Mello, Anind K Dey, Ge Gao, Krithika Jagannath, Kaifeng Jiang, Suwen Lin, Qiang Liu, Gloria Mark, Gonzalo J Martinez, Kizito Masaba, Shayan Mirjafari, Edward Moskal, Raghu Mulukutla, Kari Nies, <strong>Manikanta D Reddy</strong>, Pablo Robles-Granda, Koustuv Saha, Anusha Sirigiri, Aaron Striegel (2019) (Non first four authors are listed alphabetically)</p> 
+        <p style="font-size:14px"><i>In Proceedings of the 2019 CHI Conference on Human Factors in Computing Systems Extended Abstracts. CHI Case Studies 2019.</i></p>
      </li>
 </ul>
+
