--- a/_work/3-socweb.html
+++ b/_work/3-socweb.html
@@ -26,7 +26,7 @@ time: "Aug 2018 - May 2019"
     </li>
     <li>
         <strong><a href="https://dl.acm.org/citation.cfm?id=3299041" target="_blank">The Tesserae Project: Large-Scale,Longitudinal,In Situ, MultimodalSensing of Information Workers.</a></strong>
-        <p style="font-size:14px">Stephen M Mattingly, Julie M Gregg, Pino Audia, Ayse Elvan Bayraktaroglu, Andrew T Campbell, Nitesh V Chawla, Vedant Das Swain, Munmun De Choudhury, Sidney K D'Mello, Anind K Dey, Ge Gao, Krithika Jagannath, Kaifeng Jiang, Suwen Lin, Qiang Liu, Gloria Mark, Gonzalo J Martinez, Kizito Masaba, Shayan Mirjafari, Edward Moskal, Raghu Mulukutla, Kari Nies, <strong>Manikanta D Reddy</strong>, Pablo Robles-Granda, Koustuv Saha, Anusha Sirigiri, Aaron Striegel (2019) (Non first four authors are listed alphabetically)</p> 
+        <p style="font-size:14px">Stephen M. Mattingly, Julie M. Gregg, Pino Audia, Ayse Elvan Bayraktaraglu, Andrew T. Campbell, Nitesh V. Chawla, Vedant Das Swain, Munmun De Choudhury, Sidney K. D'Mello, Anind K. Dey, Ge Gao, Krithika Jagannath, Kaifeng Jiang, Suwen Lin, Qiang Liu, Gloria Mark, Gonzalo J. Martinez, Kizito Masaba, Shayan Mirjafari, Edward Moskal, Raghu Mulukutla, Kari Nies, <strong>Manikanta D. Reddy</strong>, Pablo Robles-Granda, Koustuv Saha, Anusha Sirigiri, and Aaron Striegel (Non first two authors are listed alphabetically)</p> 
         <p style="font-size:14px"><i>In Proceedings of the 2019 CHI Conference on Human Factors in Computing Systems Extended Abstracts. CHI Case Studies 2019.</i></p>
      </li>
 </ul>
