--- a/_work/3-socweb.html
+++ b/_work/3-socweb.html
@@ -17,7 +17,7 @@ time: "Aug 2018 - May 2019"
     <li> 
         <strong>Imputing Missing Social Media Data Streams in Multisensor Studies of Human Behavior</strong> 
         <p style="font-size:14px">Koustuv Saha, <strong>Manikanta D. Reddy</strong>, Vedant Das Swain, Julie M. Gregg, Ted Grover, Suwen Lin, Gonzalo J. Martinez, Stephen M. Mattingly, Raghu Mulukutla, Kari Nies, Pablo Robles-Granda, Anusha Sirigiri, Dong Whi Yoo, Pino Audia, Andrew T. Campbell, Nitesh V. Chawla, Sidney K. D'Mello, Anind K. Dey, Kaifeng Jiang, Qiang Liu, Gloria Mark, Ed Moskal, Aaron Striegel, and Munmun De Choudhury (Non first three authors are listed alphabetically)</p> 
-        <p style="font-size:14px"><i>Proceedings of Proceedings of International Conference on Affective Computing and Intelligent Interaction, To be Presented at ACII 2019.</i></p>
+        <p style="font-size:14px"><i>Proceedings of International Conference on Affective Computing and Intelligent Interaction, To be Presented at ACII 2019.</i></p>
     </li>
     <li>
         <strong><a href="https://dl.acm.org/citation.cfm?id=3328908" target="_blank">Differentiating Higher and Lower Job Performers in the Workplace using Mobile Sensing.</a></strong> 
@@ -27,7 +27,7 @@ time: "Aug 2018 - May 2019"
     <li>
         <strong><a href="https://dl.acm.org/citation.cfm?id=3299041" target="_blank">The Tesserae Project: Large-Scale,Longitudinal,In Situ, MultimodalSensing of Information Workers.</a></strong>
         <p style="font-size:14px">Stephen M. Mattingly, Julie M. Gregg, Pino Audia, Ayse Elvan Bayraktaraglu, Andrew T. Campbell, Nitesh V. Chawla, Vedant Das Swain, Munmun De Choudhury, Sidney K. D'Mello, Anind K. Dey, Ge Gao, Krithika Jagannath, Kaifeng Jiang, Suwen Lin, Qiang Liu, Gloria Mark, Gonzalo J. Martinez, Kizito Masaba, Shayan Mirjafari, Edward Moskal, Raghu Mulukutla, Kari Nies, <strong>Manikanta D. Reddy</strong>, Pablo Robles-Granda, Koustuv Saha, Anusha Sirigiri, and Aaron Striegel (Non first two authors are listed alphabetically)</p> 
-        <p style="font-size:14px"><i>In Proceedings of the 2019 CHI Conference on Human Factors in Computing Systems Extended Abstracts. CHI Case Studies 2019.</i></p>
+        <p style="font-size:14px"><i>Proceedings of the 2019 CHI Conference on Human Factors in Computing Systems Extended Abstracts. CHI Case Studies 2019.</i></p>
      </li>
 </ul>
 
