--- a/resume/index.html
+++ b/resume/index.html
@@ -461,8 +461,8 @@
     </div> -->
 
         <!------------------------------------------------------------------------>
-        <!-- <div id="AcademicProjects">
-            <h2>Academic Projects</h2>
+        <div id="AcademicProjects">
+            <h2>Other Academic Projects</h2>
 
             <span class="date">March 2018</span>
             <h3>A Deep Q Learning Experiment: On the mechanics of Landing a module on Moon</h3>
@@ -499,7 +499,7 @@
                 <li>Devised a hack based on PCA to clean the binary outputs without loss in accuracy</li>
             </ul>
 
-            <span class="date">Jan-Apr 2016</span>
+            <!-- <span class="date">Jan-Apr 2016</span>
             <h3>A Survey On Human Sex Determination Methods</h3>
             <h4>Machine Learning Techniques, Prof. Harish Karnick, IIT Kanpur</h4>
             <ul>
@@ -510,7 +510,7 @@
                 <li>The Analysis and Paper Report was the graded
                     <b>second best in the class of 200+ students</b>
                 </li>
-            </ul>
+            </ul> -->
 
             <span class="date">Jan-Apr 2016</span>
             <h3>Multilingual Text to Text similarity</h3>
@@ -561,7 +561,7 @@
                     sources</li>
                 <li>Presented a possible verification of current theoretical models of VHE Gamma ray sources</li>
             </ul>
-        </div> -->
+        </div>
         <div id="download" class="floating-button no-print">
             <a class="plus" target="_blank" href="https://manikantareddyd.github.io/resume/manikantareddyd_resume.pdf">
                 <img alt="Download"
