--- a/resume/index.html
+++ b/resume/index.html
@@ -382,6 +382,15 @@
                     Azure, SQL, .NET, Django, Postgres, NodeJS, Angular
                 </div>
             </div>
+            <div id="courses">
+                <div id="place">
+                    <h4>Pipelines</h4>
+                </div>
+                <div id="list">
+                    Natural Language Processing, Big Data, COSMOS, Kusto
+                </div>
+            </div>
+            
         </div>
 
         <!------------------------------------------------------------------------>
