--- a/resume/index.html
+++ b/resume/index.html
@@ -177,7 +177,7 @@
             <h3>Microsoft, Core OS & Intelligent Edge (Cosine), Platform Health</h3>
             <h4>Data & Intelligence</h4>
             <ul>
-                <li>Building solutions to churn large scale Windows and Azure telemetry to identify Performance Issues and drive to imrove overall Platform Health</li>
+                <li>Building solutions to churn large scale Windows and Azure telemetry to identify Performance Issues and drive to improve overall Platform Health</li>
             </ul>
 
             <span class="date">Aug 2018 - May 2019</span>
@@ -224,7 +224,7 @@
                         <br>To be Presented at CSCW (Austin, TX, Nov 9-13, 2019)
                     </i>
                     <br>
-                    <a href="/papers/CSCW19_LibRA.pdf" target="_blank" class="btn btn-primary btn-outline btn-xs">[PDF]</a>
+                    <a href="https://manikantareddyd.github.io/papers/CSCW19_LibRA.pdf" target="_blank" class="btn btn-primary btn-outline btn-xs">[PDF]</a>
                 </li>
                 <li>
                     <h3>Birds of a Feather Clock Together: A Study of Person–Organization Fit Through Latent Activity Routines</h3>
@@ -232,7 +232,7 @@
                         <br>To be Presented at CSCW (Austin, TX, Nov 9-13, 2019)
                     </i>
                     <br>
-                    <a href="/papers/CSCW19_POFit.pdf" target="_blank" class="btn btn-primary btn-outline btn-xs">[PDF]</a>
+                    <a href="https://manikantareddyd.github.io/papers/CSCW19_POFit.pdf" target="_blank" class="btn btn-primary btn-outline btn-xs">[PDF]</a>
                 </li>
                 <li>
                     <h3>The Language of Minority Stress Experiences of LGBTQ+ Identities on Social Media </h3>
@@ -240,7 +240,7 @@
                         <br>To be Presented at CSCW (Austin, TX, Nov 9-13, 2019)
                     </i>
                     <br>
-                    <a href="/papers/CSCW19_MinorityStress.pdf" target="_blank" class="btn btn-primary btn-outline btn-xs">[PDF]</a>
+                    <a href="https://manikantareddyd.github.io/papers/CSCW19_MinorityStress.pdf" target="_blank" class="btn btn-primary btn-outline btn-xs">[PDF]</a>
                 </li>
                 <li>
                     <h3>Imputing Missing Social Media Data Stream in Multisensor Studies of Human Behavior</h3>
@@ -248,7 +248,7 @@
                         <br>To be Presented at ACII (Cambridge, UK, September 3-6 2019).
                     </i>
                     <br>
-                    <a href="/papers/ACII19_SM_Imputation.pdf" target="_blank" class="btn btn-primary btn-outline btn-xs">[PDF]</a>
+                    <a href="https://manikantareddyd.github.io/papers/ACII19_SM_Imputation.pdf" target="_blank" class="btn btn-primary btn-outline btn-xs">[PDF]</a>
                 </li>
                 <li>
                     <h3>JobLex: A Lexico-Semantic Knowledgebase of Occupational Information Descriptors</h3>
@@ -256,22 +256,22 @@
                         <br>To be Presented at SocInfo (Doha, Qatar, Nov 18-21, 2019)
                     </i>
                     <br>
-                     <a href="/papers/Socinfo19_JobLex.pdf" target="_blank" class="btn btn-primary btn-outline btn-xs">[PDF]</a>
-                      <a href="https://github.com/joblex/joblex" target="_blank" class="btn btn-primary btn-outline btn-xs">Lexicon</a>
+                     <a href="https://manikantareddyd.github.io/papers/Socinfo19_JobLex.pdf" target="_blank" class="btn btn-primary btn-outline btn-xs">[PDF]</a>
+                      <a href="https://github.com/joblex/joblex" target="_blank" class="btn btn-primary btn-outline btn-xs">[Lexicon]</a>
                 </li>
                 <li>
                     <h3>Differentiating Higher and Lower Job Performers in the Workplace using Mobile Sensing </h3>
                     <i>In Proceedings of the ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies (PACM IMWUT) (Acceptance: 25%)</i>
                     <br>
                     <a href="https://dl.acm.org/authorize?N688136" target="_blank" class="btn btn-primary btn-outline btn-xs">[DL]</a>
-                    <a href="/papers/IMWUT_HiLo_Perf.pdf" target="_blank" class="btn btn-primary btn-outline btn-xs">[PDF]</a>
+                    <a href="https://manikantareddyd.github.io/papers/IMWUT_HiLo_Perf.pdf" target="_blank" class="btn btn-primary btn-outline btn-xs">[PDF]</a>
                 </li>
                 <li>
                     <h3>The Tesserae Project: Large-Scale, Longitudinal, In Situ, Multimodal Sensing of Information Workers</h3>
                     <i>In Proceedings of the 2019 CHI Conference on Human Factors in Computing Systems Extended Abstracts (CHI 2019 Case Study), (Acceptance: 30%).</i>
                     <br>
                     <a href="https://dl.acm.org/authorize?N688137" target="_blank" class="btn btn-primary btn-outline btn-xs">[DL]</a>
-                    <a href="/papers/CHI19_CS_TesseraeLessons.pdf" target="_blank" class="btn btn-primary btn-outline btn-xs">[PDF]</a>
+                    <a href="https://manikantareddyd.github.io/papers/CHI19_CS_TesseraeLessons.pdf" target="_blank" class="btn btn-primary btn-outline btn-xs">[PDF]</a>
                 </li>
             </ul>
         </div>
