--- a/_work/3-socweb.html
+++ b/_work/3-socweb.html
@@ -5,7 +5,7 @@ time: "Aug 2018 - May 2019"
 ---
 
 <p>
-    I'm a Research Assitant at Social Dynamics and Wellbeing Lab at Georgia Tech lead by <a href="http://www.munmund.net/" target="_blank">Dr. Munmun De Choudhury</a>. My current work involves applying natural language processing and statistical machine
+    I'm a Research Assitant at Social Dynamics and Wellbeing Lab at Georgia Tech lead by <a style="font-size:15px;" href="http://www.munmund.net/" target="_blank">Dr. Munmun De Choudhury</a>. My current work involves applying natural language processing and statistical machine
     learning techniques to analyze large scale social media data to understand behavioral aspects of mental health of beings.
 </p>
 <p>
@@ -14,46 +14,60 @@ time: "Aug 2018 - May 2019"
 
 ### Publications
 
-
 <ul>
     <li>
-        <strong>LibRA: On LinkedIn based Role Ambiguity and Its Relationship with Wellbeing and Job Performance</strong>
-        <p style="font-size:14px">Koustuv Saha, <strong>Manikanta D. Reddy</strong>, Dr Stephen Mattingly, Edward Moskal, Anusha Sirigiri and Munmun De Choudhury</p>
-        <p style="font-size:14px"><i>Proceedings of the 2019 ACM Conference on Computer Supported Cooperative Work and Social Computing, To be presented at CSCW 2019.</i></p>
+        <b>LibRA: On LinkedIn based Role Ambiguity and Its Relationship with Wellbeing and Job Performance </b><br>
+        <i style="font-size:15px; line-height: 0.9;">In Proceedings of the ACM on Human-Computer Interaction, CSCW (PACM HCI) (Acceptance: 31%)
+            <br>To be Presented at CSCW (Austin, TX, Nov 9-13, 2019)
+        </i>
+        <br>
+        <a style="font-size:15px;" href="https://manikantareddyd.github.io/papers/CSCW19_LibRA.pdf" target="_blank" >[PDF]</a>
     </li>
     <li>
-        <strong>Birds of a Feather Clock Together: A Study of Person-Organization Fit Through Latent Activity Routines</strong>
-        <p style="font-size:14px">Vedant Das Swain, <strong>Manikanta D. Reddy</strong>, Kari Anne Nies, Louis Tay, Munmun De Choudhury and Gregory D Abowd</p>
-        <p style="font-size:14px"><i>Proceedings of the 2019 ACM Conference on Computer Supported Cooperative Work and Social Computing, To be presented at CSCW 2019.</i></p>
+        <b>Birds of a Feather Clock Together: A Study of Person–Organization Fit Through Latent Activity Routines</b><br>
+        <i style="font-size:15px; line-height: 0.9;">In Proceedings of the ACM on Human-Computer Interaction, CSCW (PACM HCI) (Acceptance: 31%)
+            <br>To be Presented at CSCW (Austin, TX, Nov 9-13, 2019)
+        </i>
+        <br>
+        <a style="font-size:15px;" href="https://manikantareddyd.github.io/papers/CSCW19_POFit.pdf" target="_blank" >[PDF]</a>
     </li>
     <li>
-        <strong>The Language of Minority Stress Experiences of LGBTQ+ Identities on Social Media</strong>
-        <p style="font-size:14px">Koustuv Saha, Sang Chan Kim, <strong>Manikanta D. Reddy</strong>, Albert J. Carter, Eva Sharma, Oliver L. Haimson and Munmun De Choudhury</p>
-        <p style="font-size:14px"><i>Proceedings of the 2019 ACM Conference on Computer Supported Cooperative Work and Social Computing, To be presented at CSCW 2019.</i></p>
+        <b>The Language of Minority Stress Experiences of LGBTQ+ Identities on Social Media </b><br>
+        <i style="font-size:15px; line-height: 0.9;">In Proceedings of the ACM on Human-Computer Interaction, CSCW (PACM HCI) (Acceptance: 31%)
+            <br>To be Presented at CSCW (Austin, TX, Nov 9-13, 2019)
+        </i>
+        <br>
+        <a style="font-size:15px;" href="https://manikantareddyd.github.io/papers/CSCW19_MinorityStress.pdf" target="_blank" >[PDF]</a>
     </li>
     <li>
-        <strong><a href="http://koustuv.com/papers/ACII19_SM_Imputation.pdf" target="_blank">Imputing Missing Social Media Data Streams in Multisensor Studies of Human Behavior</a></strong>
-        <p style="font-size:14px">Koustuv Saha, <strong>Manikanta D. Reddy</strong>, Vedant Das Swain, Julie M. Gregg, Ted Grover, Suwen Lin, Gonzalo J. Martinez, Stephen M. Mattingly, Raghu Mulukutla, Kari Nies, Pablo Robles-Granda, Anusha Sirigiri, Dong Whi Yoo, Pino Audia,
-            Andrew T. Campbell, Nitesh V. Chawla, Sidney K. D'Mello, Anind K. Dey, Kaifeng Jiang, Qiang Liu, Gloria Mark, Ed Moskal, Aaron Striegel, and Munmun De Choudhury (Non first three authors are listed alphabetically)</p>
-        <p style="font-size:14px"><i>Proceedings of International Conference on Affective Computing and Intelligent Interaction, To be Presented at ACII 2019.</i></p>
+        <b>Imputing Missing Social Media Data Stream in Multisensor Studies of Human Behavior</b><br>
+        <i style="font-size:15px; line-height: 0.9;">In Proceedings of the International Conference on Affective Computing and Intelligent Interaction (ACII) (Acceptance: 18%)
+            <br>To be Presented at ACII (Cambridge, UK, September 3-6 2019).
+        </i>
+        <br>
+        <a style="font-size:15px;" href="https://manikantareddyd.github.io/papers/ACII19_SM_Imputation.pdf" target="_blank" >[PDF]</a>
     </li>
     <li>
-        <strong><a href="http://koustuv.com/papers/Socinfo19_JobLex.pdf"> JobLex: A Lexico-Semantic Knowledgebase of Occupational Information Descriptors   </a></strong>
-        <p style="font-size:14px">Koustuv Saha, <strong>Manikanta D. Reddy</strong>, and Munmun De Choudhury</p>
-        <p style="font-size:14px"><i>Accepted at 11th International Conference on Social Informatics (SocInfo), To be Presented at SocInfo 2019</i></p>
+        <b>JobLex: A Lexico-Semantic Knowledgebase of Occupational Information Descriptors</b><br>
+        <i style="font-size:15px; line-height: 0.9;">In Proceedings of 11th International Conference on Social Informatics (SocInfo)
+            <br>Poster To be Presented at SocInfo (Doha, Qatar, Nov 18-21, 2019)
+        </i>
+        <br>
+         One Page Abstract <a style="font-size:15px;" href="https://manikantareddyd.github.io/papers/Socinfo19_JobLex.pdf" target="_blank" >[PDF]</a>
+        <!--   <a style="font-size:15px;" href="https://github.com/joblex/joblex" target="_blank" >[Lexicon]</a> -->
     </li>
     <li>
-        <strong><a href="https://dl.acm.org/citation.cfm?id=3328908" target="_blank">Differentiating Higher and Lower Job Performers in the Workplace using Mobile Sensing.</a></strong>
-        <p style="font-size:14px">Shayan Mirjafari, Kizito Masaba, Ted Grover, Weichen Wang, W., Pino Audia, Andrew T. Campbell, Nitesh V. Chawla, Vedant Das Swain, Munmun De Choudhury, Anind K. Dey, Sidney K. D'Mello, Ge Gao, Julie M. Gregg, Krithika Jagannath, Kaifeng Jiang,
-            Suwen Lin, Qiang Liu, Gloria Mark, Gonzalo J. Martinez, Stephen M. Mattingly, Edward Moskal, Raghu Mulukutla, Subigya Nepal, Kari Nies, <strong>Manikanta D. Reddy</strong>, Pablo Robles-Granda, Koustuv Saha, Anusha Sirigiri, and Aaron Striegel
-            (Non first four authors are listed alphabetically)</p>
-        <p style="font-size:14px"><i>Proceedings of the ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies (PACM IMWUT)</i></p>
+        <b>Differentiating Higher and Lower Job Performers in the Workplace using Mobile Sensing </b><br>
+        <i style="font-size:15px; line-height: 0.9;">In Proceedings of the ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies (PACM IMWUT) (Acceptance: 25%)</i>
+        <br>
+        <a style="font-size:15px;" href="https://dl.acm.org/authorize?N688136" target="_blank" >[DL]</a>
+        <a style="font-size:15px;" href="https://manikantareddyd.github.io/papers/IMWUT_HiLo_Perf.pdf" target="_blank" >[PDF]</a>
     </li>
     <li>
-        <strong><a href="https://dl.acm.org/citation.cfm?id=3299041" target="_blank">The Tesserae Project: Large-Scale,Longitudinal,In Situ, MultimodalSensing of Information Workers.</a></strong>
-        <p style="font-size:14px">Stephen M. Mattingly, Julie M. Gregg, Pino Audia, Ayse Elvan Bayraktaraglu, Andrew T. Campbell, Nitesh V. Chawla, Vedant Das Swain, Munmun De Choudhury, Sidney K. D'Mello, Anind K. Dey, Ge Gao, Krithika Jagannath, Kaifeng Jiang, Suwen Lin, Qiang
-            Liu, Gloria Mark, Gonzalo J. Martinez, Kizito Masaba, Shayan Mirjafari, Edward Moskal, Raghu Mulukutla, Kari Nies, <strong>Manikanta D. Reddy</strong>, Pablo Robles-Granda, Koustuv Saha, Anusha Sirigiri, and Aaron Striegel (Non first two authors
-            are listed alphabetically)</p>
-        <p style="font-size:14px"><i>Proceedings of the 2019 CHI Conference on Human Factors in Computing Systems Extended Abstracts. CHI Case Studies 2019.</i></p>
+        <b>The Tesserae Project: Large-Scale, Longitudinal, In Situ, Multimodal Sensing of Information Workers</b><br>
+        <i style="font-size:15px; line-height: 0.9;">In Proceedings of the 2019 CHI Conference on Human Factors in Computing Systems Extended Abstracts (CHI 2019 Case Study), (Acceptance: 30%).</i>
+        <br>
+        <a style="font-size:15px;" href="https://dl.acm.org/authorize?N688137" target="_blank" >[DL]</a>
+        <a style="font-size:15px;" href="https://manikantareddyd.github.io/papers/CHI19_CS_TesseraeLessons.pdf" target="_blank" >[PDF]</a>
     </li>
 </ul>
