--- a/resume/index.html
+++ b/resume/index.html
@@ -165,8 +165,8 @@
         <div id="Education">
             <h2>Education</h2>
             <ul>
-                <li>2019 - Georgia Tech (3.9/4)                            &nbsp;&nbsp;MS &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Computer Science &nbsp;&nbsp;&nbsp;Georgia Institute of Technology &nbsp;&nbsp;&nbsp;Atlanta&nbsp;&nbsp;&nbsp;USA</li>
-                <li>2017 - IIT Kanpur&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(3.4/4) &nbsp;&nbsp;B.Tech &nbsp;&nbsp;Computer Science &nbsp;&nbsp;&nbsp;Indian Institute of Technology &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Kanpur&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;India</li>
+                <li>2019 - Georgia Tech&nbsp;| GPA 3.9&nbsp;|                          &nbsp;&nbsp;MS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Computer Science&nbsp;&nbsp;&nbsp;&nbsp;Georgia Institute of Technology&nbsp;&nbsp;&nbsp;Atlanta&nbsp;&nbsp;&nbsp;USA</li>
+                <li>2017 - IIT Kanpur&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;| CPI&nbsp; 8.2&nbsp;|&nbsp;B.Tech &nbsp;&nbsp;Computer Science&nbsp;&nbsp;&nbsp;&nbsp;Indian Institute of Technology&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Kanpur&nbsp;&nbsp;&nbsp;&nbsp;India</li>
             </ul>
         </div>
 
@@ -225,7 +225,7 @@
                         <br>To be Presented at CSCW (Austin, TX, Nov 9-13, 2019)
                     </i>
                     <br>
-                    <a href="https://manikantareddyd.github.io/papers/CSCW19_LibRA.pdf" target="_blank" class="btn btn-primary btn-outline btn-xs">[PDF]</a>
+                    <a href="https://koustuv.com/papers/CSCW19_LibRA.pdf" target="_blank" class="btn btn-primary btn-outline btn-xs">[PDF]</a>
                 </li>
                 <li>
                     <h3>Birds of a Feather Clock Together: A Study of Person–Organization Fit Through Latent Activity Routines</h3>
@@ -233,7 +233,7 @@
                         <br>To be Presented at CSCW (Austin, TX, Nov 9-13, 2019)
                     </i>
                     <br>
-                    <a href="https://manikantareddyd.github.io/papers/CSCW19_POFit.pdf" target="_blank" class="btn btn-primary btn-outline btn-xs">[PDF]</a>
+                    <a href="https://vedantswain.com/papers/pofit_routines.pdf" target="_blank" class="btn btn-primary btn-outline btn-xs">[PDF]</a>
                 </li>
                 <li>
                     <h3>The Language of Minority Stress Experiences of LGBTQ+ Identities on Social Media </h3>
@@ -241,7 +241,7 @@
                         <br>To be Presented at CSCW (Austin, TX, Nov 9-13, 2019)
                     </i>
                     <br>
-                    <a href="https://manikantareddyd.github.io/papers/CSCW19_MinorityStress.pdf" target="_blank" class="btn btn-primary btn-outline btn-xs">[PDF]</a>
+                    <a href="https://koustuv.com/papers/CSCW19_MinorityStress.pdf" target="_blank" class="btn btn-primary btn-outline btn-xs">[PDF]</a>
                 </li>
                 <li>
                     <h3>Imputing Missing Social Media Data Stream in Multisensor Studies of Human Behavior</h3>
@@ -249,7 +249,7 @@
                         <br>To be Presented at ACII (Cambridge, UK, September 3-6 2019).
                     </i>
                     <br>
-                    <a href="https://manikantareddyd.github.io/papers/ACII19_SM_Imputation.pdf" target="_blank" class="btn btn-primary btn-outline btn-xs">[PDF]</a>
+                    <a href="https://koustuv.com/papers/ACII19_SM_Imputation.pdf" target="_blank" class="btn btn-primary btn-outline btn-xs">[PDF]</a>
                 </li>
                 <li>
                     <h3>JobLex: A Lexico-Semantic Knowledgebase of Occupational Information Descriptors</h3>
@@ -257,7 +257,7 @@
                         <br>Poster To be Presented at SocInfo (Doha, Qatar, Nov 18-21, 2019)
                     </i>
                     <br>
-                     One Page Abstract <a href="https://manikantareddyd.github.io/papers/Socinfo19_JobLex.pdf" target="_blank" class="btn btn-primary btn-outline btn-xs">[PDF]</a>
+                     One Page Abstract <a href="https://koustuv.com/papers/Socinfo19_JobLex.pdf" target="_blank" class="btn btn-primary btn-outline btn-xs">[PDF]</a>
                     <!--   <a href="https://github.com/joblex/joblex" target="_blank" class="btn btn-primary btn-outline btn-xs">[Lexicon]</a> -->
                 </li>
                 <li>
@@ -265,14 +265,14 @@
                     <i>In Proceedings of the ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies (PACM IMWUT) (Acceptance: 25%)</i>
                     <br>
                     <a href="https://dl.acm.org/authorize?N688136" target="_blank" class="btn btn-primary btn-outline btn-xs">[DL]</a>
-                    <a href="https://manikantareddyd.github.io/papers/IMWUT_HiLo_Perf.pdf" target="_blank" class="btn btn-primary btn-outline btn-xs">[PDF]</a>
+                    <a href="https://www.dropbox.com/s/0wmhnib07ga7dfn/final-imwut18b-sub5828-cam-i26.pdf?dl=0" target="_blank" class="btn btn-primary btn-outline btn-xs">[PDF]</a>
                 </li>
                 <li>
                     <h3>The Tesserae Project: Large-Scale, Longitudinal, In Situ, Multimodal Sensing of Information Workers</h3>
                     <i>In Proceedings of the 2019 CHI Conference on Human Factors in Computing Systems Extended Abstracts (CHI 2019 Case Study), (Acceptance: 30%).</i>
                     <br>
                     <a href="https://dl.acm.org/authorize?N688137" target="_blank" class="btn btn-primary btn-outline btn-xs">[DL]</a>
-                    <a href="https://manikantareddyd.github.io/papers/CHI19_CS_TesseraeLessons.pdf" target="_blank" class="btn btn-primary btn-outline btn-xs">[PDF]</a>
+                    <a href="https://koustuv.com/papers/CHI_CS_TesseraeLessons.pdf" target="_blank" class="btn btn-primary btn-outline btn-xs">[PDF]</a>
                 </li>
             </ul>
         </div>
