--- a/resume/index.html
+++ b/resume/index.html
@@ -236,7 +236,7 @@
                     <a href="https://vedantswain.com/papers/pofit_routines.pdf" target="_blank" class="btn btn-primary btn-outline btn-xs">[PDF]</a>
                 </li>
                 <li>
-                    <h3>The Language of Minority Stress Experiences of LGBTQ+ Identities on Social Media </h3>
+                    <h3>The Language of LGBTQ+ Minority Stress Experiences on Social Media </h3>
                     <i>In Proceedings of the ACM on Human-Computer Interaction, CSCW (PACM HCI) (Acceptance: 31%)
                         <br>To be Presented at CSCW (Austin, TX, Nov 9-13, 2019)
                     </i>
