--- a/resume/index.html
+++ b/resume/index.html
@@ -165,8 +165,8 @@
         <div id="Education">
             <h2>Education</h2>
             <ul>
-                <li>2019 - Georgia Tech&nbsp;| GPA 3.9&nbsp;|                          &nbsp;&nbsp;MS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Computer Science&nbsp;&nbsp;&nbsp;&nbsp;Georgia Institute of Technology&nbsp;&nbsp;&nbsp;Atlanta&nbsp;&nbsp;&nbsp;USA</li>
-                <li>2017 - IIT Kanpur&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;| CPI&nbsp; 8.2&nbsp;|&nbsp;B.Tech &nbsp;&nbsp;Computer Science&nbsp;&nbsp;&nbsp;&nbsp;Indian Institute of Technology&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Kanpur&nbsp;&nbsp;&nbsp;&nbsp;India</li>
+                <li>2019 - Masters, Computer Science, Georgia Tech, GPA: 3.9/4</li>
+                <li>2017 - B Tech, Computer Science, IIT Kanpur, CPI: 8.2/10</li>
             </ul>
         </div>
 
@@ -246,7 +246,7 @@
                 <li>
                     <h3>Imputing Missing Social Media Data Stream in Multisensor Studies of Human Behavior</h3>
                     <i>In Proceedings of the International Conference on Affective Computing and Intelligent Interaction (ACII) (Acceptance: 18%)
-                        <br>To be Presented at ACII (Cambridge, UK, September 3-6 2019).
+                        <!-- <br>To be Presented at ACII (Cambridge, UK, September 3-6 2019). -->
                     </i>
                     <br>
                     <a href="https://koustuv.com/papers/ACII19_SM_Imputation.pdf" target="_blank" class="btn btn-primary btn-outline btn-xs">[PDF]</a>
