--- a/resume/index.html
+++ b/resume/index.html
@@ -182,7 +182,7 @@
             </ul>
 
             <span class="date">Aug 2018 - (Involvement Continued)</span>
-            <h3><a href="https://tesserae.nd.edu/" target="_blank">Project Tesserae</a>: Multi University Research | IARPA funded</h3>
+            <h3><a href="https://tesserae.nd.edu/" target="_blank">Project Tesserae</a>: Multi University Research | IARPA</h3>
             <h4>Graduate Researcher | GaTech | 7 Accepted publications in various conferences and journals</h4>
             <ul>
                 <li>
