--- a/resume/index.html
+++ b/resume/index.html
@@ -165,8 +165,8 @@
         <div id="Education">
             <h2>Education</h2>
             <ul>
-                <li>2019 - Masters, Computer Science, Georgia Tech, GPA: 3.9/4</li>
-                <li>2017 - B Tech, Computer Science, IIT Kanpur, CPI: 8.2/10</li>
+                <li>2019 - Masters, Computer Science, Georgia Tech, Atlanta, USA, GPA: 3.9/4</li>
+                <li>2017 - B Tech, Computer Science, IIT Kanpur, Kanpur, India, CPI: 8.2/10</li>
             </ul>
         </div>
 
@@ -278,6 +278,36 @@
         </div>
 
         <!------------------------------------------------------------------------>
+        <div id="Skills">
+            <h2>Skills</h2>
+            <div id="courses">
+                <div id="place">
+                    <h4>Languages</h4>
+                </div>
+                <div id="list">
+                    Python, C#, C, T-SQL, Javascript, Typescript
+                </div>
+            </div>
+            <div id="courses">
+                <div id="place">
+                    <h4>Technologies</h4>
+                </div>
+                <div id="list">
+                    Keras, Azure, SQL, .NET, Angular
+                </div>
+            </div>
+            <div id="courses">
+                <div id="place">
+                    <h4>Pipelines</h4>
+                </div>
+                <div id="list">
+                    Data Analysis, Data Visualization, Natural Language Processing
+                </div>
+            </div>
+            
+        </div>
+
+        <!------------------------------------------------------------------------>
         <div id="Volunteer">
             <h2>Volunteer</h2>
 
@@ -362,36 +392,6 @@
             </div>
             <div id="list">NeuroHacking with R</div>
         </div> -->
-        </div>
-
-        <!------------------------------------------------------------------------>
-        <div id="Skills">
-            <h2>Skills</h2>
-            <div id="courses">
-                <div id="place">
-                    <h4>Languages</h4>
-                </div>
-                <div id="list">
-                    Python, C#, C, T-SQL, Javascript, Typescript
-                </div>
-            </div>
-            <div id="courses">
-                <div id="place">
-                    <h4>Technologies</h4>
-                </div>
-                <div id="list">
-                    Azure, SQL, .NET, Django, Postgres, NodeJS, Angular
-                </div>
-            </div>
-            <div id="courses">
-                <div id="place">
-                    <h4>Pipelines</h4>
-                </div>
-                <div id="list">
-                    Natural Language Processing, Big Data, COSMOS, Kusto
-                </div>
-            </div>
-            
         </div>
 
         <!------------------------------------------------------------------------>
